# simple-rust-web-app

./: .gitignore  Cargo.toml  build_static.sh  rustfmt.toml  settings.toml
Kubernetes/: configmap.yml  deployment.yml  get_all.sh  history.md  patelimon-namespace.yml  service.yml
Kubernetes/Docker/: Dockerfile
src/: data.rs  main.rs  render.rs  server.rs
templates/: index.html
