[package]
name = "web-app"
version = "0.1.0"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper={ version="*", features = ["full"] }
futures = "0.3"
tokio = { version="*", features = ["full"] }
pretty_env_logger = "*"
log = "*"
config = "*"
lazy_static = "*"
itertools = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
regex = "1.4.5"
thiserror = "1.0"
time = "0.2.26"
indoc = "1.0"
askama = "0.8"

[profile.release]
lto = true

